# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.23.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Fix MetadataCache::use_prefixport(), see:
	  http://bugs.gentoo.org/show_bug.cgi?id=399233
	- Add {tbz2} also for default compact output
	- Fix typo in eix-sync: http://bugs.gentoo.org/show_bug.cgi?id=399117
	- Fix and document behavior if path is specified for cache md5-or-*
	- Remove UTF-8 symbol from my name in some docs to allow building with
	  docutils + python-3.2: http://bugs.gentoo.org/show_bug.cgi?id=399451

*eix-0.23.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Scripts: Support for status line update; minor output improvements
	- Introduce new cache method metadata-md5-or-flat and make it default
	  for PORTDIR_CACHE_METHOD:
	  http://developer.berlios.de/feature/?func=detailfeature&
	  feature_id=5483&group_id=11597
	- Include unistd.h for isatty(). Thanks to <gokturk at binghamton.edu>,
	  see http://bugs.gentoo.org/show_bug.cgi?id=397589

*eix-0.23.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- scripts: Be less rigorous with set -f
	  This fixes some regressions of eix-0.23.4 (e.g. eix-remote).

*eix-0.23.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- scripts: Fix possible globbing problems
	- varsreader.cc: Improve error output for failed "source".
	  Thanks to Sergei Trofimovich <slyfox at gentoo.org> for the patch
	- autotools: Require automake-1.11.2 and disable dependency tracking
	  by default.
	- No unmap for empty md5 files
	- Fix minor include issues

*eix-0.23.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Now --print exits with 1 if variable is not known
	- Introduce --known-vars and use it with zsh-completion
	- Major rewrite of varsreader.cc: Allow concatenation of strings
	- scripts: Remove portageq usage completely (for runtime)

*eix-0.23.2
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- New cache method metadata-md5 to support metadata/md5-cache
	  in overlays