@@ -10,6 +10,7 @@ Roland Wittmann <linuxcommando at users.sourceforge.net>
 
 Major or minor contributions by (alphabetical order):
 
+Arfrever Frehtes Taifersar Arahesis <arfrever.fta at gmail.com>
 Helmut Auer <helmut at helmutauer.de>
 Michał Bartoszkiewicz <mbartoszkiewicz at gmail.com>
 Beholders_Eye (Gentoo Forums)
