@@ -2,7 +2,7 @@
 eix - XML output format
 =======================
 
-:Authors:   Martin Vaeth <vaeth AT mathematik DOT uni-wuerzburg DOT de> (active),
+:Authors:   Martin Väth <vaeth AT mathematik DOT uni-wuerzburg DOT de> (active),
             Emil Beinroth <emilbeinroth AT gmx DOT net> (active),
             Wolfgang Frisch <xororand AT users DOT sourceforge DOT net> (inactive)
 :Copyright: This file is part of the eix project and distributed under the
