@@ -1,5 +1,10 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.23.8
+	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
+	- Make correct fix for http://bugs.gentoo.org/show_bug.cgi?id=399451.
+	  Thank Arfrever Frehtes Taifersar Arahesis <arfrever.fta at gmail.com>
+
 *eix-0.23.7
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Fix MetadataCache::use_prefixport(), see:
